--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <div id="stats">
         <p>Mean Master H: <span id="meanMasterH">0</span></p>
         <p>Mini Mean H: <span id="miniMeanH">0</span></p>
+        <p>W/L ratio: <span id="WLRatioDisplay">0</span></p>
     </div>
     <script src="script.js"></script>
 </body>
